--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       - image: cimg/node:17.5.0
     steps:
       - run: "echo === Checkout and Test ==="
-      - run: "cd ../project && npm install"
+      - run: "ls -al ../project/ && cd ../project && npm install"
       - run: "cd ../project && npm test"
   integrateFrontend:
     docker:
