--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,40 +2,46 @@ version: 2.1
 
 jobs:
   checkoutAndTest:
-      build:
-        docker:
-          - image: cimg/node:17.5.0
-        steps:
-          - run: "echo === Checkout and Test ==="
-          - run: "npm install"
-          - run: "npm test"
+    docker:
+      - image: cimg/node:17.5.0
+    steps:
+      - run: "echo === Checkout and Test ==="
+      - run: "git clone https://github.com/BrendanDB/3w5-h22-tp2-backend.git"
+      - run: "git clone https://github.com/BrendanDB/3w5-h22-tp2-frontend.git"
+      - run: "cd ./3w5-h22-tp2-frontend && npm install && npm test"
+      - run: "cd ./3w5-h22-tp2-backend && npm install && npm test"
   integrateFrontend:
-      build:
-        docker:
-          - image: cimg/node:17.5.0
-        steps:
-        - run: "echo === Integrate Frontend ==="
-        - run: "echo clone repos"
-        - run: "git clone https://github.com/BrendanDB/3w5-h22-tp2-backend.git"
-        - run: "git clone https://github.com/BrendanDB/3w5-h22-tp2-frontend.git"
-        - run: "cd ./3w5-h22-tp2-frontend && npm install && npm build"
-        - run: "mkdir ./3w5-h22-tp2-backend/public"
-        - run: "cp -rT ././3w5-h22-tp2-frontend/build ./3w5-h22-tp2-backend/public"
+    docker:
+      - image: cimg/node:17.5.0
+    steps:
+      - run: "echo === Integrate Frontend ==="
+      - run: "echo clone repos"
+      - run: "git clone https://github.com/BrendanDB/3w5-h22-tp2-backend.git"
+      - run: "git clone https://github.com/BrendanDB/3w5-h22-tp2-frontend.git"
+      - run: "cd ./3w5-h22-tp2-frontend && npm install && npm build"
+      - run: "mkdir ./3w5-h22-tp2-backend/public"
+      - run: "cp -rT ././3w5-h22-tp2-frontend/build ./3w5-h22-tp2-backend/public"
+
   deploy:
-      build:
-        docker:
-          - image: cimg/node:17.5.0
-        steps:
-          - run: "echo === Deployment ==="
-          - run: "cd ./3w5-h22-tp2-backend && ls -Rl"
-          
+    docker:
+      - image: cimg/node:17.5.0
+    steps:
+      - run: "echo === Deployment ==="
+      - run: "cd ./3w5-h22-tp2-backend && ls -Rl"
+    
 workflows:
   build:
     jobs:
       - checkoutAndTest
       - integrateFrontend:
-          requires:
-            - checkoutAndTest
+        requires:
+          - checkoutAndTest
+        - persist_to_workspace:
+          root: .
+            paths:
+            - 3w5-h22-tp2-backend-test1
       - deploy:
-          requires:
-            - integrateFrontend
+        requires:
+          - integrateFrontend
+        - attach_workspace:
+          at: .
