--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,25 +16,23 @@ jobs:
       - image: cimg/node:17.5.0
     steps:
       - run: "echo === Integrate Frontend ==="
-      - run: "echo clone repos"
       - run: "git clone https://github.com/BrendanDB/3w5-h22-tp2-backend.git"
       - run: "git clone https://github.com/BrendanDB/3w5-h22-tp2-frontend.git"
       - run: "cd ./3w5-h22-tp2-frontend && npm install && npm run build"
       - run: "mkdir ./3w5-h22-tp2-backend/public"
       - run: "cp -rT ././3w5-h22-tp2-frontend/build ./3w5-h22-tp2-backend/public"
-      - persist_to_workspace: 
-        root: .
-          paths:
-            - 3w5-h22-tp2-backend-test
 
   deploy:
     docker:
       - image: cimg/node:17.5.0
     steps:
       - run: "echo === Deployment ==="
+      - run: "git clone https://github.com/BrendanDB/3w5-h22-tp2-backend.git"
+      - run: "git clone https://github.com/BrendanDB/3w5-h22-tp2-frontend.git"
+      - run: "cd ./3w5-h22-tp2-frontend && npm install && npm run build"
+      - run: "mkdir ./3w5-h22-tp2-backend/public"
+      - run: "cp -rT ././3w5-h22-tp2-frontend/build ./3w5-h22-tp2-backend/public"
       - run: "cd ./3w5-h22-tp2-backend && ls -Rl"
-      - attach_workspace:
-        at: .
 
 workflows:
   build:
