--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,10 @@ jobs:
     docker:
       - image: cimg/node:17.5.0
     steps:
+    - persist_to_workspace:
+          root: .
+          paths:
+            - 3w5-h22-tp2-backend-test1
       - run: "echo === Integrate Frontend ==="
       - run: "git clone https://github.com/BrendanDB/3w5-h22-tp2-backend.git"
       - run: "git clone https://github.com/BrendanDB/3w5-h22-tp2-frontend.git"
@@ -26,6 +30,8 @@ jobs:
     docker:
       - image: cimg/node:17.5.0
     steps:
+    - attach_workspace:
+          at: .
       - run: "echo === Deployment ==="
       - run: "git clone https://github.com/BrendanDB/3w5-h22-tp2-backend.git"
       - run: "git clone https://github.com/BrendanDB/3w5-h22-tp2-frontend.git"
