--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,8 @@ jobs:
       - image: cimg/node:17.5.0
     steps:
       - run: "echo === Integrate Frontend ==="
-      - run: "cd ./3w5-h22-tp2-frontend && npm install && npm run build"
-      - run: "mkdir ./3w5-h22-tp2-backend/public"
+      - run: "cd ../3w5-h22-tp2-frontend && npm install && npm run build"
+      - run: "mkdir ../3w5-h22-tp2-backend/public"
       - run: "cp -rT /3w5-h22-tp2-frontend/build /3w5-h22-tp2-backend/public"
       - persist_to_workspace:
           root: .
