--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,11 @@ jobs:
       - image: cimg/node:17.5.0
     steps:
       - run: "echo === Integrate Frontend ==="
-      - run: "cd ../3w5-h22-tp2-frontend && npm install && npm run build"
-      - run: "mkdir ../3w5-h22-tp2-backend/public"
-      - run: "cp -rT /3w5-h22-tp2-frontend/build /3w5-h22-tp2-backend/public"
+      - run: "git clone https://github.com/BrendanDB/3w5-h22-tp2-backend.git"
+      - run: "git clone https://github.com/BrendanDB/3w5-h22-tp2-frontend.git"
+      - run: "cd ./3w5-h22-tp2-frontend && npm install && npm run build"
+      - run: "mkdir ./3w5-h22-tp2-backend/public"
+      - run: "cp -rT ././3w5-h22-tp2-frontend/build ./3w5-h22-tp2-backend/public"
       - persist_to_workspace:
           root: .
           paths:
