--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ workflows:
   build:
     jobs:
       - checkoutAndTest
+    jobs:
       - integrateFrontend:
           requires:
             - checkoutAndTest
